# anno-broadlistening

./: .dockerignore  DIFFERENCES.md  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: node.yaml
docs/: for_windows_user.md  quickstart.md
scatter/: .gitignore  README.md  README_ja.md  VERIFICATION.md  requirements.txt
scatter/next-app/: .eslintrc.json  .gitignore  README.md  globals.css  icons.tsx  next.config.js  package-lock.json  package.json  types.ts  utils.ts
scatter/next-app/components/: AfterAppendix.tsx  Appendix.tsx  CustomHeader.tsx  CustomIntroduction.tsx  CustomTitle.tsx  DesktopFullscreenFavorites.tsx  DesktopFullscreenFilter.tsx  DesktopFullscreenTools.tsx  DesktopMap.tsx  DesktopTooltip.tsx  Header.tsx  MobileMap.tsx  MobileTooltip.tsx  Outline.tsx  Report.tsx  Tooltip.tsx  VideoLink.tsx
scatter/next-app/hooks/: useAutoResize.ts  useClusterColor.ts  useFilter.ts  useInferredFeatures.ts  useRelativePositions.ts  useTranslatorAndReplacements.ts  useVoronoiFinder.ts  useZoom.ts
scatter/next-app/pages/: _app.tsx  index.tsx
scatter/next-app/pages/report/: [name].tsx
scatter/pipeline/: main.py  specs.json  utils.py
scatter/pipeline/configs/: dummy-comments-japan-multi.json  dummy-comments-japan.json
scatter/pipeline/inputs/: dummy-comments-japan.csv
scatter/pipeline/services/: category_classification.py
scatter/pipeline/steps/: aggregation.py  clustering.py  embedding.py  extraction.py  labelling.py  overview.py  takeaways.py  translation.py  visualization.py
(+19 files in other folders)
